# Multiscale-pattern

./: .hgignore  README  ToDo.txt  do_regression.sh  rebuild.sh  rebuild_docs.sh
congsp/: ARKode_WENO.cpp  ARKode_WENO2D_method2.cpp  ARKode_WENO2D_method3.cpp  ARKode_WENO2D_ud_method3.cpp  ARKode_WENO_2D.cpp  Makefile  WENO1D.txt  WENO1D_mesh.txt  WENO2D_meshx.txt  WENO2D_meshy.txt  input_WENO1D.txt  input_WENO2D.txt  plot_WENO1D.py  plot_WENO2D.py
doc/: README
doc/examples/: README
doc/extra_packages/: install_extensions.sh  sphinx-fortran-extension.tgz
matlab/: A_DIRK.m  A_IRK.m  CH_boundaries.txt  EStab_CH_1D.m  EStab_VanderPol.m  EStab_analytic.m  EStab_bruss.m  EStab_bruss_1D.m  EStab_ionization_2D.m  EStab_test.m  F_DIRK.m  F_IRK.m  JCH_1D.m  J_CH_1D.m  J_VanderPol.m  J_analytic.m  J_analytic_nonlin.m  J_analytic_sys.m  J_bruss.m  J_bruss_1D.m  J_ionization_2D.m  J_test.m  Jbruss.m  Jbruss1.m  Jbruss2.m  Jbruss3.m  Jbruss_1D.m  Ji_CH_1D.m  Ji_VanderPol.m  Ji_analytic.m  Ji_bruss.m  Ji_bruss_1D.m  Ji_ionization_2D.m  Jionization_2D.m  Problems.txt  Y_ARK.m  Y_DIRK.m  Y_ERK.m  Y_IRK.m  Ytrue_test1  (+88 more)
matlab/adaptive_results/: h_test_plots_ark.m  h_test_plots_dirk.m  h_test_results.m  h_test_results.txt  oversolve_b1_ark32.eps  oversolve_b1_ark43.eps  oversolve_b1_ark54.eps  oversolve_b1_ark_PI.eps  oversolve_b1_ark_PID.eps  oversolve_b1_ark_eG.eps  oversolve_b1_ark_ieG.eps  oversolve_b1_dirk32.eps  oversolve_b1_dirk43.eps  oversolve_b1_dirk54.eps  oversolve_b1_dirk_PI.eps  oversolve_b1_dirk_PID.eps  oversolve_b1_dirk_eG.eps  oversolve_b2_ark32.eps  oversolve_b2_ark43.eps  oversolve_b2_ark54.eps  oversolve_b2_ark_PI.eps  oversolve_b2_ark_PID.eps  oversolve_b2_ark_eG.eps  oversolve_b2_ark_ieG.eps  oversolve_b2_dirk32.eps  oversolve_b2_dirk43.eps  oversolve_b2_dirk54.eps  oversolve_b2_dirk_PI.eps  oversolve_b2_dirk_PID.eps  oversolve_b2_dirk_eG.eps  oversolve_b3_ark32.eps  oversolve_b3_ark43.eps  oversolve_b3_ark54.eps  oversolve_b3_ark_PI.eps  oversolve_b3_ark_PID.eps  oversolve_b3_ark_eG.eps  oversolve_b3_ark_ieG.eps  oversolve_b3_dirk32.eps  oversolve_b3_dirk43.eps  oversolve_b3_dirk54.eps  (+198 more)
matlab/fixed_results/: a1_conv.eps  a2_conv.eps  a3_conv.eps  b1_conv.eps  b2_conv.eps  b3_conv.eps  h_test_results.m  h_test_results_fixed.txt  v1_conv.eps  v2_conv.eps  v3_conv.eps
regression/: rebuild.sh
regression/arkode/: Makefile  adaptivity_parameter_results.txt  ark_analytic.c  ark_analytic_nonlin.c  ark_analytic_nonlin_back.c  ark_analytic_sys.cpp  ark_bruss.f90  ark_brusselator.c  ark_brusselator1D.c  ark_brusselator1D_FEM.c  ark_brusselator1D_FEM_klu.c  ark_brusselator1D_FEM_slu.c  ark_brusselator1D_klu.c  ark_brusselator1D_omp.c  ark_brusselator1D_pt_slu.c  ark_brusselator1D_slu.c  ark_brusselator_M.c  ark_emep.f90  ark_heat1D.c  ark_heat1D_adapt.c  ark_heat2D.cpp  ark_hires.f90  ark_hyperstable.cpp  ark_medakzo.f90  ark_orego.f90  ark_pollu.f90  ark_ringmod.f90  ark_rober.f90  ark_robertson.c  ark_robertson_klu.c  ark_robertson_root.c  ark_robertson_slu.c  ark_set_check.c  ark_vdpol.f90  ark_vdpolm.f90  arkode_tools.py  bruss_plots.m  butcher_comparison_results.txt  butcher_comparisons.py  diag_tools.py  (+27 more)
regression/cvode/: Makefile  cv_VanderPol.c  cv_analytic.c  cv_analytic_nonlin.c  cv_analytic_sys.c  cv_brusselator.c  cv_brusselator1D.c  plot_brusselator1D.py
regression/ida/: Makefile  ida_brusselator1D_FEM.c
regression/sundials/: Makefile  fgmres_tester.c  gmres_tester.c  nvector_parallel_grid_test.c  nvector_parallel_test.c  nvector_serial_test.c  pcg_tester.c  sparse_tester.c  sparse_tester.out
sundials/: CMakeLists.txt  INSTALL_NOTES  Makefile.in  acinclude.m4  configure  configure.ac
sundials/autotest/: README  sundials.sh  sundials_build.sh  sundials_check_bash.sh  sundials_test.sh  sundials_timeout.sh
sundials/config/: FindSUPERLUMT.cmake  SundialsLapack.cmake  SundialsSuperLUMT.cmake
sundials/src/nvec_spcpar/: CMakeLists.txt  Makefile.in  fnvector_spcparallel.c  fnvector_spcparallel.h  nvector_spcparallel.c
sundials_extensions/: Make.machine  Makefile  ToDo.txt
sundials_extensions/arkode/: Diagnostics_output.txt  Makefile  README  ToDo.txt  arkode.c  arkode.h  (+34 more)
www/: ARKode.css  ARKode.html  README  feed.xml  index.html
(+889 files in other folders)
